add sort order to pagination
